<resources>
    <string name="app_name">Food</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>


    <string name="main_title">我的菜单</string>
    <string name="settlement">结算</string>
    <string name="add_water">加水</string>
    <string name="add_rice">加饭</string>
    <string name="delete_order">删除未下单</string>
    <string name="order_place">下/改单</string>
    <string name="order_place1">下单</string>
    <string name="order_menu_sum">菜单价格</string>
    <string name="order_sum">总计</string>
    <string name="setting">设置</string>
    <string name="vending_machine">售卖机</string>
    <string name="robot">机器人</string>
    <string name="tesk">桌台</string>
    <string name="ip">IP</string>
    <string name="tip_ip">请输入IP</string>
    <string name="tip_net_fail">请求失败</string>
    <string name="tip_desk_no">请输入桌台号</string>
    <string name="tip_set_ip">您还没有设置ip</string>
    <string name="tip_not_order">你还没有点菜</string>
    <string name="tip_check_ip">请检查你的Ip</string>
    <string name="tip_check_desk">请检查桌台</string>
    <string name="tip_runing_order">正在下单</string>
    <string name="tip_is_start">请检查是否开台</string>
    <string name="tip_open_desk">正在开台</string>
    <string name="tip_fail_desk">开台失败</string>
    <string name="tip_succeed_desk">开台成功</string>
    <string name="tip_new_add1">新添加订单失败</string>
    <string name="tip_new_add2">添加桌台失败</string>
    <string name="tip_new_add3">临时订单出现异常</string>
    <string name="text_surplus_time">剩余%1$s秒</string>
    <string name="error_htp">请求失败</string>
    <string name="order_ok_print">下单成功正在通知后厨&#8230;</string>
    <string name="state_gv_food">食物</string>
    <string name="socket_seng_fail">连接失败</string>
    <string name="socket_seng_check">没有连接，可能是服务器已断开</string>
    <string name="netrock_check">请检查网络是否连接</string>
    <string name="tip_order_exption">桌台无订单</string>

    <string name="server_off">没有连接，可能是服务器已断开</string>
    <string name="link_fail">连接失败</string>


    <string name="order_item_text">%1$s&#160;%2$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<string name="toast_notOrder">您还没有点菜!</string>
    <string name="text_tag_equipment">平板</string>
</resources>
