<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/blur"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ImageView
    android:id="@+id/iv_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/transparent"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:padding="10dp"
        android:text="@string/setting"
        android:textSize="18sp" />

    <com.food.lmln.food.view.MaterialEditText
        android:id="@+id/tv_dialog_ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:hint="@string/ip"
        android:paddingLeft="0dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:singleLine="true"
        android:textSize="18sp"
        app:labelColor="@color/colorBlue"
        app:labelText="@string/ip"
        app:maxLength="4"
        app:overlengthColor="@android:color/holo_red_light"
        app:preLineColor="#18b4ed" />

    <com.food.lmln.food.view.MaterialEditText
        android:id="@+id/tv_dialog_tesk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/tesk"
        android:paddingLeft="0dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:singleLine="true"
        android:textSize="18sp"
        app:labelColor="@color/colorBlue"
        app:labelText="@string/tesk"
        app:maxLength="12"
        app:overlengthColor="@android:color/holo_red_light"
        app:preLineColor="#18b4ed" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="取消" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="#D1D1D1"></View>

        <Button
            android:id="@+id/btn_comfirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:text="确定" />
    </LinearLayout>
    </LinearLayout>
</FrameLayout>