<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rlAddBill"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/ll01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_toLeftOf="@+id/miniFab01"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vending_machine"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingBottom="5dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/miniFab01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="25dp"
                app:fabSize="mini"
                app:elevation="5dp"
                app:backgroundTint="@color/colorAccent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/ll01"
            >
            <TextView
                android:layout_toLeftOf="@+id/miniFab02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/robot"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingBottom="5dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/miniFab02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="25dp"
                app:fabSize="mini"
                app:elevation="5dp"
                app:backgroundTint="@color/colorAccent"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_above="@+id/ll02"
            >
            <TextView
                android:layout_toLeftOf="@+id/miniFab02"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:paddingBottom="5dp"
                />
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/miniFab03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher"
                android:layout_marginRight="25dp"
                app:fabSize="mini"
                app:elevation="5dp"
                app:backgroundTint="@color/colorAccent"
                />
        </LinearLayout>


    </RelativeLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab01Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@mipmap/ic_launcher"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        app:fabSize="normal"
        app:elevation="5dp"
        app:backgroundTint="#31bfcf"
        app:rippleColor="#e7d161"
        />
</RelativeLayout>